adding cors configuration